# agents-hub

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TASK_REPORT.md  audit_report.md  check_routes.py  extract_conversation.py  index.html  opencode.json  pyproject.toml  start-backend.ps1  temp_codex_test.py  test_events.py  test_executor.py  test_role_config.py  test_sample.py  测试.md
.husky/: pre-commit
_temp/: agents-hub-new-style.html  agents-hub-prototype-v2.html  agents-hub-prototype-v3.html  agents-hub-prototype-v4.html  agents-hub-prototype-v5-warm.html  agents-hub-prototype-v6-bold.html  agents-hub-prototype.html  permission-request-preview.html  role-management-panel.html  skill-square.html
agents_hub/: CLAUDE.md  bootstrap.py  exceptions.py
agents_hub/agent_bridge/: CLAUDE.md  __init__.py  bridge.py  config.py  exceptions.py  models.py  protocols.py
agents_hub/agents/: __init__.py  exceptions.py  models.py  role.py  role_manager.py
agents_hub/api/: app.py  routes.py
agents_hub/config/: __init__.py  config.py  types.py
agents_hub/core/: CLAUDE.md
agents_hub/mcp/: __init__.py  errors.py  server.py
agents_hub/realtime/: __init__.py  dependencies.py  events.py  exceptions.py  manager.py
agents_hub/roles/: CLAUDE.md  __init__.py  exceptions.py  models.py  prompt_file.py  role.py  (+1 more)
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md  RUN.md  design-spec-from-reference.md
examples/: custom_log_dir_example.py
frontend/: .env.development  .eslintignore  .eslintrc.json  .gitignore  CLAUDE.md  Makefile  README.md  STATIC_CHECK.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  verify-setup.js  vite.config.ts  vitest.config.ts
scripts/: analyze_session.py  analyze_session_codex.py  run_wechat.py  screenshot_create_dialog.py  screenshot_create_role_dialog.py  screenshot_edit_role_dialog.py  screenshot_main.py  screenshot_team_management.py  video2gif.py  截图脚本运行说明.md
skills/: html-style-guide.md  layered-layout-pattern.md  mimo端到端测试流程.md
template/: Dockerfile
tests/: test_bug.md  test_mcp_tools_spec.md
(+892 files in other folders)
